feat: Configure package publishing and routes, update package name, metadata, and add testing script.

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,8 @@
 {
     "name": "theaarch64/laravel-sms-forwarder",
+    "description": "Laravel SMS Forwarder.",
+    "keywords": ["laravel", "sms", "forwarder"],
+    "license": "MIT",
     "require": {
         "php": "^8.2",
         "illuminate/console": "^11.0|^12.0",
@@ -24,7 +27,8 @@
     "autoload-dev": {
         "psr-4": {
             "Tests\\": "tests/"
-        }
+        },
+        "classmap": ["stubs/"]
     },
     "extra": {
         "laravel": {
@@ -40,5 +44,8 @@
         }
     },
     "minimum-stability": "dev",
-    "prefer-stable": true
+    "prefer-stable": true,
+    "scripts": {
+        "test": "@php vendor/bin/pest"
+    }
 }
